# hexafreeze

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: check.yml
benches/: generate_a_lot.rs  generation.rs
examples/: genemerate.rs  generate_a_lot.rs
src/: lib.rs
src/constants/: mod.rs
src/error/: mod.rs
src/generator/: checks.rs  mod.rs  nano.rs  test.rs  util.rs
src/generator/util/: mod.rs
src/util/: constants.rs
