[package]
name = "hexafreeze"
version = "0.1.0"
edition = "2021"
authors = ["Blocklisted <blocklisted@pm.me>"]
readme = "README.md"
repository = "https://github.com/blocklisted/hexafreeze"
license = "MIT"
keywords = ["async", "web", "distributed", "snowflake", "unique"]
categories = ["web-programming", "database"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
tokio = {version = "1.24", features = ["sync"]}
once_cell = "1.17"

[dev-dependencies]
tokio = {version = "1.24", features = ["sync", "rt-multi-thread", "macros"]}
dashmap = "5.4.0"
num_cpus = "1.1"
env_logger = "0.10"
criterion = "0.4.0"

[profile.bench]
debug = true

[[bench]]
name = "generation"
harness = false