[package]
name = "hexafreeze"
version = "0.2.0"
edition = "2021"
authors = ["Blocklisted <blocklisted@pm.me>"]
description = "Asynchronous generation of snowflake IDs"
readme = "README.md"
repository = "https://github.com/blocklisted/hexafreeze"
license = "MIT"
keywords = ["async", "web", "distributed", "snowflake", "unique"]
categories = ["web-programming", "database"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = {version = "1", features = ["sync", "rt", "time"]}
once_cell = "1.17"
spin_sleep = "1.1"

[profile.release]
debug = true

[dev_dependencies]
tokio = {version = "1.24", features = ["rt-multi-thread", "macros"]}
num_cpus = "1.15"
dashmap = "5.4"