[package]
name = "hexafreeze"
version = "0.3.2"
edition = "2021"
authors = ["Blocklisted <blocklisted@pm.me>"]
description = "Asynchronous generation of snowflake IDs"
readme = "README.md"
repository = "https://github.com/blocklisted/hexafreeze"
license = "MIT"
keywords = ["async", "web", "distributed", "snowflake", "unique"]
categories = ["web-programming", "database"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["sync", "rt", "time"]}
once_cell = "1.17"
spin_sleep = "1.1"
thiserror = "1.0"
tracing = "0.1"

[profile.release]
debug = true

[dev-dependencies]
tokio = {version = "1.24", features = ["rt-multi-thread", "macros"]}
num_cpus = "1.15"
dashmap = "5.4"
criterion = {version = "0.3", features = ["async_tokio"]}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-flame = "0.2"
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[lib]
bench = false

[[bench]]
name = "generate_a_lot"
harness = false